--- a/applications/electron/package.json
+++ b/applications/electron/package.json
@@ -53,6 +53,14 @@
     }
   },
   "dependencies": {
+    "@theia/ai-chat": "1.52.0",
+    "@theia/ai-chat-ui": "1.52.0",
+    "@theia/ai-code-completion": "1.52.0",
+    "@theia/ai-core": "1.52.0",
+    "@theia/ai-history": "1.52.0",
+    "@theia/ai-openai": "1.52.0",
+    "@theia/ai-terminal": "1.52.0",
+    "@theia/ai-workspace-agent": "1.52.0",
     "@theia/bulk-edit": "1.52.0",
     "@theia/callhierarchy": "1.52.0",
     "@theia/console": "1.52.0",
